# learn-c

./: CMakeLists.txt
array_and_string/: array.c  string.c
basic/: constants.c  data_types.c  operators.c  tokens.c  type_casting.c
data_input_output/: format_specifier.c  input_output.c
decision/: goto.c  if_else.c  switch.c
function/: function_call_by_reference.c  function_call_by_value.c  functions.c  library_functions.c  recursion.c  storage_classes.c  variable_scope.c
loop/: do_while.c  for.c  while.c
pointers/: pointer.c
pointers/memory_handling/: calloc.h  dynamic_memory.c  free.h  malloc.h
preprocessor_and_header_file/: header.c  preprocessors.c  swap.h
structure_and_union/: structure.c  typedef.c  union.c
