cmake_minimum_required(VERSION 3.23)
project(LearnC C)

set(CMAKE_C_STANDARD 99)

add_executable(LearnC main.c)
add_executable(LearnTokens basic/tokens.c)
add_executable(LearnConstant basic/constants.c)
add_executable(LearnOperator basic/operators.c)
add_executable(LearnDataTypes basic/data_types.c)
add_executable(LearnTypeCasting basic/type_casting.c)
add_executable(LearnInputOutput data_input_output/input_output.c)
add_executable(LearnIfElse decision/if_else.c)
add_executable(LearnGoto decision/goto.c)
add_executable(LearnSwitch decision/switch.c)
add_executable(LearnWhile loop/while.c)
add_executable(LearnDoWhile loop/do_while.c)
add_executable(LearnFor loop/for.c)
add_executable(LearnFunctions function/functions.c)
add_executable(LearnFunctionCallByValue function/function_call_by_value.c)
add_executable(LearnFunctionCallByReference function/function_call_by_reference.c)
add_executable(LearnLibraryFunctions function/library_functions.c)